# PyUpi

./: Dockerfile  alembic.ini  alembic_docker.ini  docker-compose.yml  pyproject.toml  ruff.toml
app/: dependencies.py  main.py
app/contracts/: UserRequest.py
app/models/: UserModel.py
app/routers/: users.py
migrations/: env.py
migrations/versions/: 36e2bafc3b97_first_migration.py  577cb83946c8_users_addstarsign.py  674b2f27fc99_users_makestarsignnullable.py
